tests/paczka1/small_fuzzy/44415256.err
Error in line 5: A635 A542 -1,2
Error in line 1: A635 A542 21,1
Error in line 6: eBawgX A542 288,6
Error in line 11: dT1wrQb S14 26,4
